[package]
name = "metro"
version = "0.1.0"
authors = ["Ted Kassen <tedgkassen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = {version = "0.2.22", features = ["rt-core", "rt-threaded"]}
